--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "ethers": "^5.7.2",
     "identicon.js": "^2.3.3",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
@@ -23,7 +24,7 @@
     "web3": "1.0.0-beta.55"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts  start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
